appId: com.airwallex.paymentacceptance
env:
  USE_NEW_SESSION: ${USE_NEW_SESSION || "false"}
---
- launchApp
- tapOn: "Integrate with Airwallex UI"
- runFlow:
    file: ../Common/flow_update_checkout_mode.yaml
    env:
      CHECKOUT_MODE: ${output.settings.checkoutMode.oneOff} # Ensure one-off checkout mode
# Ensure layout is Accordion - go to settings and change it
- tapOn: setting
- runFlow:
    file: ../Common/flow_update_settings.yaml
    env:
      LAYOUT: ${LAYOUT}
      ENVIRONMENT: ${output.settings.environment.demo}
      NEXT_TRIGGERED_BY: ${output.settings.nextTriggeredBy.customer}
      IS_GUEST: false
      USE_NEW_SESSION: ${USE_NEW_SESSION}
- tapOn: "Embedded element"
# Wait for the embedded element activity to load
- assertVisible: "Order details"
# Scroll down to AlipayHK
- scrollUntilVisible:
    element: "AlipayHK"
# Click on AlipayHK
- tapOn: "AlipayHK"
# Click Pay button
- scrollUntilVisible:
    element: "^(Pay|Confirm)$"
    centerElement: true # Center so the button isn't cut off at the bottom edge and stays tappable
- tapOn: "^(Pay|Confirm)$"
- runFlow:
    file: ../Common/flow_handle_redirect.yaml
