appId: com.airwallex.paymentacceptance
---
- extendedWaitUntil:
    visible: "Purchase Authentication"
    timeout: 30000
- tapOn:
    id: "challengeDataEntry"
- inputText: "1234"
- hideKeyboard
- runFlow:
    when:
      true: ${CANCEL_3DS}
    commands:
      - tapOn: "Navigate up"
- runFlow:
    when:
      true: ${CANCEL_3DS == 'false'}
    commands:
      - tapOn: "Submit"