appId: com.airwallex.paymentacceptance
env:
  CHECKOUT_MODE: ${CHECKOUT_MODE || "One-off payment"}
---
- runFlow: # ensure checkout mode 
    when:
      notVisible: ${CHECKOUT_MODE}
    commands:
      - tapOn: Payment type
      - tapOn: ${CHECKOUT_MODE}
      - assertVisible: ${CHECKOUT_MODE}